# Noise-Modeling-for-Bioacoustics-with-Contrastive-SSL

./: .gitignore  README.md  pyproject.toml  run.py  setup.cfg  temp.py
configs/: README.md  default.yaml
configs/data/: birdsong.yaml  cbc2020.yaml  cbc2020_sequential.yaml  cbc2020_spectrogram.yaml  cifar10.yaml  urbansound8k.yaml
configs/metric/: multiclass_accuracy.yaml
configs/mode/: one_gpu_local.yaml  one_gpu_slurm.yaml
configs/monitor/: rankme.yaml
configs/user/: generic.yaml  vsharm44.yaml
logs/: multirun
pca_kmeans_results/: kmeans_16clusters.joblib  kmeans_8clusters.joblib  kmeans_8clusters_init20.joblib  kmeans_clustering_results.csv  pca_model.joblib
ssl_bioacoustics/: CNN_LSTM.py  birdsong_preprocess.py  utils.py  visualization.py  xeno_canto_api.py
ssl_bioacoustics/custom_datasets/: README.md  __init__.py  audio_dataset.py  frozen_noise.py  noise_slide_spectrogram.py  urban_sound_8k.py
ssl_bioacoustics/custom_samplers/: __init__.py  concat_sampler.py  sliding_window_sampler.py
tests/: README.md  common_test_utils.py  test_audiodataset.py  test_chunk_shuffle_label.py  test_concat_sampler.py  test_frozen_noise.py  test_hydra_dotpath_lookup.py  test_isolate_rng.py  test_natural_corruptions.py  test_seeds_shuffle.py  test_shuffle_and_learn.py  test_spectrogram.py  test_urbansound.py
utils/: cbc2020_spectrogram_pooled_generation.py  check_runs.py  combine_cluster_images.py  create_noise_samples_cbc2020.py  efficient_storage_cbc2020.py  extract_xc_ratings.py  generate_heatmap.py  pooled_preprocess_cbc2020.py  process_folder.sh  verify_cbc2020_data_integrity.py
(+42 files in other folders)
