[metadata]
name = ssl_bioacoustics
version = attr: ssl_bioacoustics.__version__
description = SSL for bioacoustics
long_description = file: README.md
long_description_content_type = text/markdown
author = Vipul Sharma, Randall Balestriero
author_email = vipul_sharma@brown.edu, randallbalestriero@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pytest
    pytest-cov
    ipython
    notebook
    black
    numpy
    pandas
    matplotlib
    seaborn
    PyWavelets
    librosa
    scikit-learn
    torch
    torchvision
    torchaudio
    stable-ssl @ git+https://github.com/vipulSharma18/stable-SSL.git@main#egg=stable-ssl
